k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kosher-market
  labels:
    app.kubernetes.io/name: kosher-market
